--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --watch"
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
@@ -19,11 +20,14 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.11",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "babel-jest": "^27.0.5",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
@@ -34,6 +38,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.5",
+    "jest-styled-components": "^7.0.4",
     "prettier": "^2.3.1",
     "typescript": "^4.3.4"
   }
