--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --env=jsdom --watch"
+    "test": "jest --env=jsdom --watchAll"
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
